feature: удаление предметов
